--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
  <meta name="msvalidate.01" content="7653C8BB64DD75FFC49FAE3CF440BA66" />
 <meta name="google-site-verification" content="pul-WoKF5Ix2WErwTv444wA_956YVki5NJCf6l-POQ8" />
 <meta name="google-site-verification" content="PoDL6QpoReETVEnRhEgoZs4fUoM94QrZJ1-e6xOVujc" />
+  <title>Best Natural Joint Supplements Over 40: The Top 3</title>
+  <meta name="description" content="Discover the best natural joint supplements over 40 to ease pain, reduce inflammation, and boost mobility. Learn about top ingredients like turmeric, glucosamine, and boswellia to keep your joints healthy and strong as you age.">
 </head>
 
 <p>
@@ -982,5 +984,6 @@ Some links on this website may be affiliate links, meaning we may earn a commiss
  <a href="https://sites.google.com/view/best-joint-supplements-over-40/">top natural joint supplements over 40</a>
 <a href="https://bestnaturaljointsupplementsover40.pages.dev/">best natural joint supplements over 40</a>
 <a href="https://naturalsupplementsforwomenover40.com/best-joint-supplements-for-women-over-40/">Best Natural Joint Supplements for women 40+</a>
+
 
 
